# MultiGeiger

./: .gitignore  Makefile  README.md  README.rst  platformio.ini
.github/: README.md
.github/workflows/: build.yml
.tx/: config
docs/: ttn2luft.md
docs/locales/de/LC_MESSAGES/: setup.po
docs/source/: changes.rst  conf.py  development.rst  index.rst  mqtt.rst  setup.rst.bak  setup_lora.rst  usage.rst
locales/en/LC_MESSAGES/: assembly.mo
src/app/: controller.cpp  controller.hpp  main.cpp
src/comm/ble/: ble.cpp  ble.hpp
src/comm/lora/: loraWan.cpp  loraWan.hpp
src/comm/mqtt/: mqtt.cpp  mqtt.hpp
src/comm/wifi/: wifi.cpp  wifi.hpp
src/config/: README.md  config.default.hpp
src/core/: core.cpp  core.hpp
src/drivers/clock/: clock.cpp  clock.hpp
src/drivers/display/: display.cpp  display.hpp
src/drivers/hal/: heltecv2.hpp
src/drivers/io/: io.cpp  io.hpp
src/drivers/sensors/: sensors.cpp  sensors.hpp
tools/: .env.example  .gitignore  README.md  embed_web.py  generate_lora_credentials.py  mqtt_logger.py  pyproject.toml  query_data.py  requirements.txt
tools/mqtt_logger/: .env.example  .gitignore  README.md  mqtt_logger.py  pyproject.toml  query_data.py  report.py
web/: .gitignore  README.md  WORKFLOW.md  app.js  config-style.css  config.html  config.js  dashboard.html  mock-api.json  mock-config.json  style.css
